fix link and added result of test in windows

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebook": "facebook.com/",
   "github": "github.com/",
-  "linkedin": "linkedin.com/in/",
+  "linkedin": "linkedin.com/",
   "twitter": "twitter.com/",
   "instagram": "instagram.com/",
   "reddit": "reddit.com/user/"
