command line integration to add accounts
This allows you to add social accounts using command line. Closes https://github.com/vaibhavsingh97/StalkPy/issues/4

--- a/config.json
+++ b/config.json
@@ -1,8 +1,10 @@
 {
-  "facebook": "facebook.com/",
-  "github": "github.com/",
-  "linkedin": "linkedin.com/",
-  "twitter": "twitter.com/",
-  "instagram": "instagram.com/",
-  "reddit": "reddit.com/user/"
+    "reddit": "reddit.com/user/", 
+    "github": "github.com/", 
+    "instagram": "instagram.com/", 
+    "purohit": "purohit", 
+    "twitter": "twitter.com/", 
+    "linkedin": "linkedin.com/", 
+    "facebook": "facebook.com/", 
+    "ashwini": "ashwini"
 }
