--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-codecov==2.0.9
-requests==2.18.4
+args==0.1.0
+certifi==2018.4.16
+chardet==3.0.4
 clint==0.5.1
-argparse==1.4.0
+codecov==2.0.9
+coverage==4.5.1
+idna==2.6
+requests==2.18.4
+urllib3==1.22
